# faim-jetraw

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
scripts/: compress.cfg  compress.py
src/jetraw_tasks/: functions.py
src/jetraw_workflows/: tasks.py
tests/jetraw_workflows/: test_.py
