[metadata]
name = jetraw_workflows
description = Jetraw compression workflows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-basel/faim-jetraw
author = Tim-Oliver Buchholz, Jan Eglinger
author_email = tim-oliver.buchholz@fmi.ch, jan.eglinger@fmi.ch
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: Apache-2.0
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/fmi-basel/faim-jetraw/issues
    Documentation = https://github.com/fmi-basel/faim-jetraw#README.md
    Source Code = https://github.com/fmi-basel/faim-jetraw
    User Support = https://github.com/fmi-basel/faim-jetraw/issues

[options]
packages = find:
install_requires =
    numcodecs
    numpy
    prefect
    tifffile
python_requires = >=3.8
package_dir =
    = src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
